--- a/index.html
+++ b/index.html
@@ -545,6 +545,57 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="23022021-1">23/02/2021 - Impression 3D - Pièce d'attache des planches supérieures</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">La pièce disigné la veille part en impression ! Pour rappel, il s'agit de la pièce servant de maintient à toutes les planches supérieures du tank !</p>
+					<p style="padding: 0 18px;">Supérieur physiquement mais en état de supériorité aussi car sans elles pas de tourelle avec canon ! Et donc pas de tourelle toute choupinou :p</p>
+					<p style="padding: 0 18px;">Donc en image juste en dessous la première pièce ! La seconde (symétrie) imprimée juste après !</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813716681007562812/IMG_20210223_111847.jpg" alt="Pièce 3D qui maintiendra les trois planches du dessus fixé au char, tank de derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813716758615687178/IMG_20210223_111656.jpg" alt="Pièce 3D qui maintiendra les trois planches du dessus fixé au char, tank de côté" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Cela aurait été trop facile que toutes les pièces soient imprimées sans encombre ! Nous avons eu une pièce qui n'a donc pas bien accroché.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813717728510476338/IMG_20210223_112317.jpg" alt="Pièce 3D qui maintiendra les trois planches du dessus, échec, non c'est pas une arme" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Non c'est pas un flingue miniature ! Pas d'arme dans le tank ! Enfin si, un beau canon dans une tourelle mais c'est qu'un détail ça !</p>
+					<br>
+					<p style="padding: 0 18px;">Après nettoyage et réimpression sans soucis cette fois, une belle deusième pièce !</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813731594530717696/IMG_20210223_121807.jpg" alt="2 pièces 3D qui maintiendront les trois planches du dessus fixé au char, tank de derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813731701985509426/IMG_20210223_121739.jpg" alt="2 pièces 3D qui maintiendront les trois planches du dessus fixé au char, tank de côté vers l'avant" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="22022021-5">22/02/2021 - Site - État actuel et animations</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Antonin avance sur le site, l'HTML (structure) et le CSS (aperçu) est presque fini néanmoins le responsive (adaptation pour les différents appareils) n'est vraiment pas bon.</p>
@@ -570,7 +621,7 @@
 					</div>
 					<p style="padding: 0 18px 2rem 18px;">Cette pièce est très importante afin de maintenir la planche centrale du dessus qui aura la tourelle (et son poids) dessus.</p>
 				</div>
-				<button type="button" class="collapsible" id="22022021-3">22/02/2021 - CNC - Suite découpe des planches derière le tank</button>
+				<button type="button" class="collapsible" id="22022021-3">22/02/2021 - CNC - Suite découpe des planches derrière le tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On continue avec la découpe de la planche du fond avec l'intégration de l'écran LCD (et pas LSD, d'ailleurs des écran LSD n'existe pas ! En auriez-vous pris ?).</p>
 					<p style="padding: 0 18px;">Le projet avance vite ! On a déjà bien dépasser le planning mais on continue à fond sur notre lancée !</p>
