--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@
 				<button type="button" class="collapsible" id="23022021-1">23/02/2021 - Impression 3D - Pièce d'attache des planches supérieures</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La pièce disigné la veille part en impression ! Pour rappel, il s'agit de la pièce servant de maintient à toutes les planches supérieures du tank !</p>
-					<p style="padding: 0 18px;">Supérieur physiquement mais en état de supériorité aussi car sans elles pas de tourelle avec canon ! Et donc pas de tourelle toute choupinou :p</p>
+					<p style="padding: 0 18px;">Supérieures physiquement mais en état de supériorité aussi car sans elles pas de tourelle avec canon ! Et donc pas de tourelle toute choupinou :p</p>
 					<p style="padding: 0 18px;">Donc en image juste en dessous la première pièce ! La seconde (symétrie) imprimée juste après !</p>
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
@@ -578,7 +578,7 @@
 					</div>
 					<p style="padding: 0 18px;">Non c'est pas un flingue miniature ! Pas d'arme dans le tank ! Enfin si, un beau canon dans une tourelle mais c'est qu'un détail ça !</p>
 					<br>
-					<p style="padding: 0 18px;">Après nettoyage et réimpression sans soucis cette fois, une belle deusième pièce !</p>
+					<p style="padding: 0 18px;">Après nettoyage et réimpression sans soucis cette fois, une belle deuxième pièce !</p>
 					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px;">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
