--- a/index.html
+++ b/index.html
@@ -545,6 +545,23 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="23022021-2">23/02/2021 - Test du microcontrôleur</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Le but est d'utiliser des Arduino (d'où ArduiTank (on ne sait jamais si vous êtes à la ramasse)) pour le projet sauf que c'est beaucoup trop simple pour nous, voyons ! Non, non c'est pas trop simple haha.</p>
+					<p style="padding: 0 18px;">Nous comptons utiliser 2 Arduino nano sauf que l'on ne voulait pas avoir toute la carte car cela prend de la place et que nous voulions gagner de la place et tout mettre sur un PCB (circuit imprimé) pour que ce soit plus "propre".</p>
+					<p style="padding: 0 18px;">Pour ce faire, nous enlevons le microcontrôleur de sa carte. Une image vaut mieux qu'un long discours :</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813721187674488832/image0.jpg" alt="Test du microcontrôleur" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px">Ugo en train de faire de la magie noire avec son microcontrôleur. Il faisait un programme de test avec une led mais on dirait plus une bombe à désamorcer dans cet état.</p>
+					<p style="padding: 0 18px 2rem 18px;">Spoiler : Cela ne va pas rester comme ça ! Dommage hein ? Non, c'est vraiment pas beau, je vous l'assure !</p>
+				</div>
 				<button type="button" class="collapsible" id="23022021-1">23/02/2021 - Impression 3D - Pièce d'attache des planches supérieures</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La pièce disigné la veille part en impression ! Pour rappel, il s'agit de la pièce servant de maintient à toutes les planches supérieures du tank !</p>
