--- a/index.html
+++ b/index.html
@@ -548,8 +548,9 @@
 				<button type="button" class="collapsible" id="23022021-2">23/02/2021 - Test du microcontrôleur</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Le but est d'utiliser des Arduino (d'où ArduiTank (on ne sait jamais si vous êtes à la ramasse)) pour le projet sauf que c'est beaucoup trop simple pour nous, voyons ! Non, non c'est pas trop simple haha.</p>
-					<p style="padding: 0 18px;">Nous comptons utiliser 2 Arduino nano sauf que l'on ne voulait pas avoir toute la carte car cela prend de la place et que nous voulions gagner de la place et tout mettre sur un PCB (circuit imprimé) pour que ce soit plus "propre".</p>
-					<p style="padding: 0 18px;">Pour ce faire, nous enlevons le microcontrôleur de sa carte. Une image vaut mieux qu'un long discours :</p>
+					<p style="padding: 0 18px;">Nous comptons utiliser 2 Arduino nano sauf qu'on ne voulait pas avoir toute la carte car cela prend de la place et que nous voulons gagner de la place et tout mettre sur un PCB (circuit imprimé) pour que ce soit plus "propre".</p>
+					<p style="padding: 0 18px;">Pour ce faire, nous enlevons le microcontrôleur de sa carte.</p>
+					<p style="padding: 0 18px;">PUne image vaut mieux qu'un long discours :</p>
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
@@ -559,7 +560,7 @@
 							</div>
 						</div>
 					</div>
-					<p style="padding: 0 18px">Ugo en train de faire de la magie noire avec son microcontrôleur. Il faisait un programme de test avec une led mais on dirait plus une bombe à désamorcer dans cet état.</p>
+					<p style="padding: 0 18px">Ugo en train de faire de la magie noire avec son microcontrôleur. Non car j'ai rien compris moi. Soyons sérieux un moment : Il faisait un programme de test avec une led mais on dirait plus une bombe à désamorcer dans cet état.</p>
 					<p style="padding: 0 18px 2rem 18px;">Spoiler : Cela ne va pas rester comme ça ! Dommage hein ? Non, c'est vraiment pas beau, je vous l'assure !</p>
 				</div>
 				<button type="button" class="collapsible" id="23022021-1">23/02/2021 - Impression 3D - Pièce d'attache des planches supérieures</button>
