--- a/index.html
+++ b/index.html
@@ -550,7 +550,7 @@
 					<p style="padding: 1rem 18px 0 18px;">Le but est d'utiliser des Arduino (d'où ArduiTank (on ne sait jamais si vous êtes à la ramasse)) pour le projet sauf que c'est beaucoup trop simple pour nous, voyons ! Non, non c'est pas trop simple haha.</p>
 					<p style="padding: 0 18px;">Nous comptons utiliser 2 Arduino nano sauf qu'on ne voulait pas avoir toute la carte car cela prend de la place et que nous voulons gagner de la place et tout mettre sur un PCB (circuit imprimé) pour que ce soit plus "propre".</p>
 					<p style="padding: 0 18px;">Pour ce faire, nous enlevons le microcontrôleur de sa carte.</p>
-					<p style="padding: 0 18px;">PUne image vaut mieux qu'un long discours :</p>
+					<p style="padding: 0 18px;">Une image vaut mieux qu'un long discours :</p>
 					<div class="tile is-ancestor">
 						<div class="tile is-parent is-horizontal">
 							<div class="tile is-child">
@@ -614,7 +614,7 @@
 						</div>
 					</div>
 				</div>
-				<button type="button" class="collapsible" id="22022021-5">22/02/2021 - Site - État actuel et animations</button>
+				<button type="button" class="collapsible" id="22022021-6">22/02/2021 - Site - État actuel et animations</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Antonin avance sur le site, l'HTML (structure) et le CSS (aperçu) est presque fini néanmoins le responsive (adaptation pour les différents appareils) n'est vraiment pas bon.</p>
 					<p style="padding: 0 18px;">En cette soirée du 22 février, pas mal d'animations ont été faites en JS :</p>
@@ -624,7 +624,7 @@
 						<li>La navbar change de couleur et devient un peu transparente quand on dépasse la première image avec le logo dessus. (Fonctionne uniquement sur PC et tablettes suite au problème de responsive.)</li>
 					</ul>
 				</div>
-				<button type="button" class="collapsible" id="22022021-4">22/02/2021 - Modélisation 3D - Pièce d'attache des trois planche du dessus et maintient de la planche arrière</button>
+				<button type="button" class="collapsible" id="22022021-5">22/02/2021 - Modélisation 3D - Pièce d'attache des trois planche du dessus et maintient de la planche arrière</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Davide s'occupe de terminer la journée par la modélisation 3D de la pièce qui va maintenir la grosse plache du dessus, ainsi que les deux plus petites qui sont vers l'arrière.</p>
 					<p style="padding: 0 18px;">Cette pièce maintiendra la planche de fond (avec le LCD) en place.</p>
@@ -638,6 +638,13 @@
 						</div>
 					</div>
 					<p style="padding: 0 18px 2rem 18px;">Cette pièce est très importante afin de maintenir la planche centrale du dessus qui aura la tourelle (et son poids) dessus.</p>
+				</div>
+				<button type="button" class="collapsible" id="23022021-4">22/02/2021 - Changement de moteur & code</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Changement de programme (et dans le sens physique du terme aussi) !</p>
+					<p style="padding: 0 18px;">Malheureusement, même si le moteur pas à pas prévu pour Arduino a un bon couple, il est néanmoins pas rapide du tout ! On change donc par un motoréducteur qui nous est fourni par le prof (mais nous avons acheté les notre).</p>
+					<p style="padding: 0 18px;">Pas de chance ! Colin avait fait tout le code pour des moteurs pas à pas. Heureusement, une partie du code va pouvoir être gardé (enfin pour le moment).</p>
+					<p style="padding: 0 18px 2rem 18px;">Il y a par exemple la partie (dans le code) de la tourelle qui restera inchangée et les notions d'avancer, de reculer, de vitesse qui reste applicable aussi</p>
 				</div>
 				<button type="button" class="collapsible" id="22022021-3">22/02/2021 - CNC - Suite découpe des planches derrière le tank</button>
 				<div class="content collapse is-medium">
