--- a/index.html
+++ b/index.html
@@ -641,7 +641,7 @@
 				</div>
 				<button type="button" class="collapsible" id="23022021-4">22/02/2021 - Changement de moteur & code</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Changement de programme (et dans le sens physique du terme aussi) !</p>
+					<p style="padding: 1rem 18px 0 18px;">Changement de programme (et physiquement aussi) !</p>
 					<p style="padding: 0 18px;">Malheureusement, même si le moteur pas à pas prévu pour Arduino a un bon couple, il est néanmoins pas rapide du tout ! On change donc par un motoréducteur qui nous est fourni par le prof (mais nous avons acheté les notre).</p>
 					<p style="padding: 0 18px;">Pas de chance ! Colin avait fait tout le code pour des moteurs pas à pas. Heureusement, une partie du code va pouvoir être gardé (enfin pour le moment).</p>
 					<p style="padding: 0 18px 2rem 18px;">Il y a par exemple la partie (dans le code) de la tourelle qui restera inchangée et les notions d'avancer, de reculer, de vitesse qui reste applicable aussi</p>
