--- a/index.html
+++ b/index.html
@@ -545,6 +545,79 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="23022021-3">23/02/2021 - CNC - Planches du dessus de la base du tank</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Ce serait bête d'avoir la pièce qui supporte les planches qui fermeront presque totalement la base du tank, en milieu de journée et de ne même pas usiner les fameuses planches !</p>
+					<p style="padding: 0 18px;">Donc usinage des deux petites planches qui ferme l'arrière du tank.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813775783163199520/IMG_20210223_151302.jpg" alt="2 petites planches ferme fin du tank, tank de côté/devant" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813775825904074812/IMG_20210223_151354.jpg" alt="2 petites planches ferme fin du tank, tank de côté/derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<br>
+					<p style="padding: 0 18px;">On s'attaque à du lourd avec l'usinage de la planche principale du dessus de la base de ce tank.</p>
+					<p style="padding: 0 18px;">On voulait quand même un minimum une planche sympa.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813826563854172190/IMG_20210223_183417.jpg" alt="Usinage planche principale dessus de la base du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813828334231355492/IMG_20210223_184211.jpg" alt="Usinage planche principale dessus de la base du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813831326339694632/IMG_20210223_185352.jpg" alt="Planche principale dessus de la base du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px">Une fois (mais pas deux !) ça qui est usiné, il faut la visser à la structure déjà existante !</p>
+					<p style="padding: 0 18px">On fixe quand même pour un aperçu car malheureusement les plaques des côtés vont devoir être refaites. En effet les motoréducteurs sont plus long et pas les attaches au même endroit que les moteurs pas à pas.</p>
+					<p style="padding: 0 18px">En image, l'avancée du tank avec la belle nouvelle planche de mise ainsi que "l'intérieur" du tank avec le peu d'espace disponible.</p>
+					<div class="tile is-ancestor" style="padding: 0 18px 2rem 18px">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843848085241876/IMG_20210223_194240.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843968663748628/IMG_20210223_194308.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/devant" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843697275764736/IMG_20210223_194121.jpg" alt="Vue de l'intérieur de la base du tank" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+				</div>
 				<button type="button" class="collapsible" id="23022021-2">23/02/2021 - Test du microcontrôleur</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Le but est d'utiliser des Arduino (d'où ArduiTank (on ne sait jamais si vous êtes à la ramasse)) pour le projet sauf que c'est beaucoup trop simple pour nous, voyons ! Non, non c'est pas trop simple haha.</p>
@@ -968,6 +1041,50 @@
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813541516576030760/unknown.png" alt="Join capot dessus tank">
 							</figure>
 						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813716681007562812/IMG_20210223_111847.jpg" alt="Pièce 3D qui maintiendra les trois planches du dessus fixé au char, tank de derrière">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813721187674488832/image0.jpg" alt="Test du microcontrôleur">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813731701985509426/IMG_20210223_121739.jpg" alt="2 pièces 3D qui maintiendront les trois planches du dessus fixé au char, tank de côté vers l'avant">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-parent is-horizontal">
+					<div class="tile is-child">
+						<figure class="image">
+							<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843848085241876/IMG_20210223_194240.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/derrière">
+						</figure>
+					</div>
+				</div>
+				<div class="tile is-parent is-horizontal">
+					<div class="tile is-child">
+						<figure class="image">
+							<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843968663748628/IMG_20210223_194308.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/devant">
+						</figure>
+					</div>
+				</div>
+				<div class="tile is-parent is-horizontal">
+					<div class="tile is-child">
+						<figure class="image">
+							<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843697275764736/IMG_20210223_194121.jpg" alt="Vue de l'intérieur de la base du tank">
+						</figure>
 					</div>
 				</div>
 			</div>
