--- a/index.html
+++ b/index.html
@@ -1066,25 +1066,27 @@
 						</div>
 					</div>
 				</div>
-				<div class="tile is-parent is-horizontal">
-					<div class="tile is-child">
-						<figure class="image">
-							<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843848085241876/IMG_20210223_194240.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/derrière">
-						</figure>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843848085241876/IMG_20210223_194240.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/derrière">
+							</figure>
+						</div>
 					</div>
-				</div>
-				<div class="tile is-parent is-horizontal">
-					<div class="tile is-child">
-						<figure class="image">
-							<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843968663748628/IMG_20210223_194308.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/devant">
-						</figure>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843968663748628/IMG_20210223_194308.jpg" alt="Planche principale du dessus de la base du tank fixée, tank de côté/devant">
+							</figure>
+						</div>
 					</div>
-				</div>
-				<div class="tile is-parent is-horizontal">
-					<div class="tile is-child">
-						<figure class="image">
-							<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843697275764736/IMG_20210223_194121.jpg" alt="Vue de l'intérieur de la base du tank">
-						</figure>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843697275764736/IMG_20210223_194121.jpg" alt="Vue de l'intérieur de la base du tank">
+							</figure>
+						</div>
 					</div>
 				</div>
 			</div>
