--- a/index.html
+++ b/index.html
@@ -545,6 +545,64 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="23022021-4">23/02/2021 - Impression 3D - Roue crantée pour le servo moteur (axe horizontale) & Support du roulement avec les fils</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Qu'est-ce que l'on carbure !! On s'alimente peut-être à l'uranium haha !</p>
+					<p style="padding: 0 18px;">Ce qui est intéressant, c'est de s'attaquer à la tourelle ! (Le jeu de mot n'était pas voullu.)</p>
+					<p style="padding: 0 18px;">Pour que la tourelle puisse tourner à droite ou à gauche, il faudra un servo avec un mécanisme d'engrenages pour que cela soit fonctionnel.</p>
+					<p style="padding: 0 18px;">D'abord une pièce pour le servo qui sera une roue crantée, puis une pièce pour maintenir le roulement (axe centrale) dans la planche de bois de la base et enfin l'engrage qui fera tourner le roulement grace au servo et de la roue crantée.</p>
+					<p style="padding: 0 18px;">Bon j'avoue, c'est pas simple de visualiser tout ça ! En plus l'engrenage ce sera pour un autre jour.</p>
+					<p style="padding: 0 18px;">Voici donc en image la roue crantée qui est attachée au cervo.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813883377656660008/IMG_20210223_222059.jpg" alt="Roue crantée attachée au servo" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813882941133946931/IMG_20210223_221907.jpg" alt="Roue crantée attachée au servo, tank de côté/derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813883207551549450/IMG_20210223_221850.jpg" alt="Roue crantée attachée au servo, tank de côté/devant" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px;">Ensuite la pièce qui permet le maintient du roulement avec les fils dans la planche en bois.</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813902747303936020/IMG_20210223_233746.jpg" alt="Maintient roulement dans la planche" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813906980044275782/IMG_20210223_235524.jpg" alt="Maintient roulement dans la planche, tank de côté/derrière" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/813909999154888724/IMG_20210223_235513.jpg" alt="Maintient roulement dans la planche, tank de côté" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">Comme dit plus haut, l'engrenage qui s'emboitera dans le roulement et qui touchera la roue crantée sera pour le lendemain si tout va bien !</p>
+					<br>
+				</div>
 				<button type="button" class="collapsible" id="23022021-3">23/02/2021 - CNC - Planches du dessus de la base du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Ce serait bête d'avoir la pièce qui supporte les planches qui fermeront presque totalement la base du tank, en milieu de journée et de ne même pas usiner les fameuses planches !</p>
@@ -1085,6 +1143,29 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813843697275764736/IMG_20210223_194121.jpg" alt="Vue de l'intérieur de la base du tank">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813883377656660008/IMG_20210223_222059.jpg" alt="Roue crantée attachée au servo">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813882941133946931/IMG_20210223_221907.jpg" alt="Roue crantée attachée au servo, tank de côté/derrière">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813883207551549450/IMG_20210223_221850.jpg" alt="Roue crantée attachée au servo, tank de côté/devant">
 							</figure>
 						</div>
 					</div>
