--- a/index.html
+++ b/index.html
@@ -1170,6 +1170,29 @@
 						</div>
 					</div>
 				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813902747303936020/IMG_20210223_233746.jpg" alt="Maintient roulement dans la planche">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813906980044275782/IMG_20210223_235524.jpg" alt="Maintient roulement dans la planche, tank de côté/derrière">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813909999154888724/IMG_20210223_235513.jpg" alt="Maintient roulement dans la planche, tank de côté">
+							</figure>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
