--- a/index.html
+++ b/index.html
@@ -1277,7 +1277,7 @@
 				<div class="content is-large has-text-centered">
 					<p class="subtitle is-8">Par mail : <a class="button" href="mailto:info@arduitank.be">Cliquez ici</a></p>
 				</div>
-				<p class="subtitle is-3 has-text-centered is-danger">Formulaire de contact encore non fonctionnel</p>
+				<p class="subtitle is-3 has-text-centered has-text-danger">Formulaire de contact encore non fonctionnel</p>
 				<form class="form" action="" method="get">
 					<div class="field is-horizontal">
 						<div class="field-label is-normal">
