--- a/index.html
+++ b/index.html
@@ -323,6 +323,15 @@
 											</div>
 										</div>
 									<p class="navbar-item">
+										23/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<hr class="navbar-divider">
+									<p class="navbar-item">Comming soon...</p>
+									<hr class="navbar-divider">
+									<p class="navbar-item">Comming soon...</p>
+									<hr class="navbar-divider">
+									<p class="navbar-item">
 										21/02/2021
 									</p>
 									<hr class="navbar-divider">
