--- a/index.html
+++ b/index.html
@@ -326,8 +326,11 @@
 										23/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<hr class="navbar-divider">
 									<p class="navbar-item">Comming soon...</p>
+									<hr class="navbar-divider">
+									<p class="navbar-item">
+										22/02/2021
+									</p>
 									<hr class="navbar-divider">
 									<p class="navbar-item">Comming soon...</p>
 									<hr class="navbar-divider">
