--- a/index.html
+++ b/index.html
@@ -326,13 +326,13 @@
 										23/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<p class="navbar-item">Comming soon...</p>
+									<p class="navbar-item">Comming soon... (mis dans la section)</p>
 									<hr class="navbar-divider">
 									<p class="navbar-item">
 										22/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<p class="navbar-item">Comming soon...</p>
+									<p class="navbar-item">Comming soon... (mis dans la section)</p>
 									<hr class="navbar-divider">
 									<p class="navbar-item">
 										21/02/2021
