--- a/index.html
+++ b/index.html
@@ -332,7 +332,24 @@
 										22/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<p class="navbar-item">Comming soon... (mis dans la section)</p>
+									<a class="navbar-item" href="./#22022021-6">
+										Site - État actuel et animations
+									</a>
+									<a class="navbar-item" href="./#22022021-5">
+										Modélisation 3D - Pièce d'attache des trois planches du dessus et maintient de la planche arrière
+									</a>
+									<a class="navbar-item" href="./#22022021-4">
+										Changement de moteur & code
+									</a>
+									<a class="navbar-item" href="./#22022021-3">
+										CNC - Suite découpe des planches derrière le tank
+									</a>
+									<a class="navbar-item" href="./#22022021-2">
+										Modélisation 3D - Télécommande
+									</a>
+									<a class="navbar-item" href="./#22022021-1">
+										Impression 3D de la pièce d'attache pour les planches arrière du tank & découpe CNC des planches
+									</a>
 									<hr class="navbar-divider">
 									<p class="navbar-item">
 										21/02/2021
@@ -767,7 +784,7 @@
 						<li>La navbar change de couleur et devient un peu transparente quand on dépasse la première image avec le logo dessus. (Fonctionne uniquement sur PC et tablettes suite au problème de responsive.)</li>
 					</ul>
 				</div>
-				<button type="button" class="collapsible" id="22022021-5">22/02/2021 - Modélisation 3D - Pièce d'attache des trois planche du dessus et maintient de la planche arrière</button>
+				<button type="button" class="collapsible" id="22022021-5">22/02/2021 - Modélisation 3D - Pièce d'attache des trois planches du dessus et maintient de la planche arrière</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Davide s'occupe de terminer la journée par la modélisation 3D de la pièce qui va maintenir la grosse plache du dessus, ainsi que les deux plus petites qui sont vers l'arrière.</p>
 					<p style="padding: 0 18px;">Cette pièce maintiendra la planche de fond (avec le LCD) en place.</p>
