--- a/index.html
+++ b/index.html
@@ -326,7 +326,18 @@
 										23/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<p class="navbar-item">Comming soon... (mis dans la section)</p>
+									<a class="navbar-item" href="./#23022021-4">
+										Impression 3D - Roue crantée pour le servo moteur (axe horizontale) & Support du roulement avec les fils
+									</a>
+									<a class="navbar-item" href="./#23022021-3">
+										CNC - Planches du dessus de la base du tank
+									</a>
+									<a class="navbar-item" href="./#23022021-2">
+										Test du microcontrôleur
+									</a>
+									<a class="navbar-item" href="./#23022021-1">
+										Impression 3D - Pièce d'attache des planches supérieures
+									</a>
 									<hr class="navbar-divider">
 									<p class="navbar-item">
 										22/02/2021
