--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
 	<meta property="og:type" content="website" class="next-head" />
 	<meta property="og:url" content="https://arduitank.be" class="next-head" />
 	<meta property="og:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé.">
-	<meta property="og:image" content="http://arduitank.be/img/banner.png" class="next-head">
+	<meta property="og:image" content="http://arduitank.be/img/logo%20V2.2.png" class="next-head">
 
 	<meta name="twitter:card" content="summary_large_image" class="next-head" />
 	<meta name="twitter:title" content="ArduiTank | Accueil" class="next-head" />
 	<meta name="twitter:url" content="https://arduitank.be" />
 	<meta name="twitter:description" content="Bienvenue sur le site d'ArduiTank. Equipe de projet pour char robotisé et télécommandé." class="next-head">
 	<meta name="twitter:creator" content="@ArduiTank" class="next-head">
-	<meta name="twitter:image:src" content="http://arduitank.be/img/banner.png" class="next-head">
+	<meta name="twitter:image:src" content="http://arduitank.be/img/logo%20V2.2.png" class="next-head">
 
 	<meta name="dcterms.title" content="ArduiTank | Accueil" class="next-head" />
 	<meta name="dcterms.type" content="Text" class="next-head" />
