--- a/index.html
+++ b/index.html
@@ -64,33 +64,31 @@
 			/* Space above and under the picture*/
 			padding: 10rem 0;
 		}
+
+		/* The images used for background */
 		.background-2Dplan-robot {
-			/* The image used */
 			background-image: url(http://arduitank.be/img/banner.png);
 		}
 		.background-model3D-chain {
-			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812692985631735839/IMG_20210220_152752.jpg);
 		}
 		.background-blank-1chain {
-			/* The image user */
 			background-image: url(https://cdn.discordapp.com/attachments/501009071365685249/812846520377933844/IMG_20210220_213332.jpg);
 		}
 		.background-2blanks-1chain {
-			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812778846465949696/IMG_20210220_211229.jpg);
 		}
 		.background-2blanks-board {
-			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813182685450338346/IMG_20210221_235425.jpg);
 		}
 		.background-2blanks-board-chain {
-			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813182755088236544/IMG_20210221_235529.jpg);
 		}
 		.background-2blanks-board-reverse {
-			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813182836126253116/IMG_20210221_235648.jpg);
+		}
+		.background-base-missing-2planks {
+			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813909999154888724/IMG_20210223_235513.jpg);
 		}
 
 		/* Colors */
@@ -514,7 +512,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-model3D-chain">
+		<div class="hero-body background-banner background-blank-1chain">
 		</div>
 		
 		<div class="hero-body" id="equipe">
@@ -573,7 +571,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-blank-1chain">
+		<div class="hero-body background-banner background-base-missing-2planks">
 		</div>
 		
 		<div class="hero-body" id="actu">
