--- a/index.html
+++ b/index.html
@@ -1376,10 +1376,17 @@
 					</div>
 
 					<div class="field is-horizontal">
-						<div class="control has-text-centered response">
-							<button class="button has-background-grey-dark has-text-white" type="submit" class="submit">
-								Envoyer
-							</button>
+						<div class="field-label">
+							<!-- Left empty for spacing -->
+						</div>
+						<div class="field-body">
+							<div class="field">
+								<div class="control has-text-centered response">
+									<button class="button has-background-grey-dark has-text-white" type="submit" class="submit">
+										Envoyer
+									</button>
+								</div>
+							</div>
 						</div>
 					</div>
 				</form>
