--- a/index.html
+++ b/index.html
@@ -491,12 +491,12 @@
 					<p>Nous avons un projet ambitieux ! Nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
 					<h5>Arduino (tous) :</h5>
-					<progress class="progress is-arduino1" style="height: 1.5rem;" value="5" max="100">5%</progress>
+					<progress class="progress is-arduino1" style="height: 1.5rem;" value="6.5" max="100">6.5%</progress>
 					<div class="columns is-mobile">
 						<div class="column is-half-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
 							<p>Robot :</p>
 						</div>
-						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
+						<div class="column"><progress class="progress is-arduino2" value="8" max="100">8%</progress></div>
 					</div>
 					<div class="columns is-mobile">
 						<div class="column is-half-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
@@ -1242,7 +1242,7 @@
 				<p class="title is-1 has-text-centered" id="information">
 					Statistiques
 				</p>
-				<center>
+				<center class="is-tablet is-desktop is-widescreen is-fullhd">
 					<table class="table">
 						<thead>
 							<tr>
@@ -1301,6 +1301,65 @@
 						</tbody>
 					</table>
 				</center>
+				<div style="overflow-x: auto; overflow-y: hidden;" class="is-mobile">
+					<table class="table is-fullwidth">
+						<thead>
+							<tr>
+								<th>Joueurs</th>
+								<th><abbr title="Nombre de pas du moteur">Moteur</abbr></th>
+								<th><abbr title="Tirs qui ont atteint la cible">Tirs touché</abbr></th>
+								<th><abbr title="Tirs qui est dans le vide">Tirs dans l'eau</abbr></th>
+								<th><abbr title="Total nombre de tirs">Tirs globaux</abbr></th>
+							</tr>
+						</thead>
+						<tfoot>
+							<tr>
+								<th>Joueurs</th>
+								<th><abbr title="Nombre de pas du moteur">Moteur</abbr></th>
+								<th><abbr title="Tirs qui ont atteint la cible">Tirs touché</abbr></th>
+								<th><abbr title="Tirs qui est dans le vide">Tirs dans l'eau</abbr></th>
+								<th><abbr title="Total nombre de tirs">Tirs globaux</abbr></th>
+							</tr>
+						</tfoot>
+						<tbody>
+							<tr class="is-selected">
+								<th>Global</th>
+								<td>1500</td>
+								<td>10</td>
+								<td>50</td>
+								<td>60</td>
+							</tr>
+							<tr>
+								<th>Antonin</th>
+								<td>500</td>
+								<td>1</td>
+								<td>20</td>
+								<td>21</td>
+							</tr>
+							<tr>
+								<th>Davide</th>
+								<td>500</td>
+								<td>6</td>
+								<td>2</td>
+								<td>8</td>
+							</tr>
+							<tr>
+								<th>Ugo</th>
+								<td>300</td>
+								<td>2</td>
+								<td>13</td>
+								<td>15</td>
+							</tr>
+							<tr>
+								<th>Colin</th>
+								<td>200</td>
+								<td>1</td>
+								<td>15</td>
+								<td>16</td>
+							</tr>
+						</tbody>
+					</table>
+				</div>
 			</div>
 		</div>
 
