--- a/index.html
+++ b/index.html
@@ -1302,7 +1302,7 @@
 					</table>
 				</div>
 			</div>
-			<div class="container is-tablet is-desktop is-widescreen is-fullhd" style="max-width: 100%;">
+			<div class="container is-tablet is-desktop is-widescreen is-fullhd">
 				<p class="title is-1 has-text-centered" id="information">
 					Statistiques
 				</p>
