--- a/index.html
+++ b/index.html
@@ -1238,7 +1238,7 @@
 		</div>
 		
 		<div class="hero-body" id="stats">
-			<div class="container is-fluid">
+			<div class="container" style="max-width: 100%;">
 				<p class="title is-1 has-text-centered" id="information">
 					Statistiques
 				</p>
