--- a/index.html
+++ b/index.html
@@ -583,6 +583,7 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<!-- 26/02/2021 : Site - Grace à l'aide d'une personne extérieure, le responsive est fonctionnel -->
 				<button type="button" class="collapsible" id="23022021-4">23/02/2021 - Impression 3D - Roue crantée pour le servo moteur (axe horizontale) & Support du roulement avec les fils</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Qu'est-ce que l'on carbure !! On s'alimente peut-être à l'uranium haha !</p>
